--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "gray-matter": "^4.0.3",
+    "lodash.kebabcase": "^4.1.1",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.5",
+    "markdown-it-header-sections": "^1.0.0",
     "next": "13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "shiki": "^0.11.1"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
