--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-header-sections": "^1.0.0",
+    "match-sorter": "^6.3.1",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-table": "^7.8.0",
     "shiki": "^0.11.1"
   },
   "devDependencies": {
