--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,28 +6,28 @@ name: GitHub Pages deploy
 on:
   push:
     branches: [main]
-    # dicoment dulu, dikarenakan sudah diup di vercel, kalau pake github pages gunakan yang bawah
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
+    # didisabled dulu manu di menu Actions, dikarenakan sudah diup di vercel, kalau pake github pages gunakan yang bawah
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout 🛎️
-#         uses: actions/checkout@v2.3.1
-#       - name: Use Node.js 16.x
-#         uses: actions/setup-node@v1
-#         with:
-#           node-version: "16.x"
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: "16.x"
 
-#       - name: Installing my packages
-#         run: npm ci
+      - name: Installing my packages
+        run: npm ci
 
-#       - name: Build my App
-#         run: npm run build && npm run export && touch ./out/.nojekyll
+      - name: Build my App
+        run: npm run build && npm run export && touch ./out/.nojekyll
 
-#       - name: Deploy 🚀
-#         uses: JamesIves/github-pages-deploy-action@v4.4.1
-#         with:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#           BRANCH: public # The branch the action should deploy to.
-#           FOLDER: out # The folder the action should deploy.
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.4.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: public # The branch the action should deploy to.
+          FOLDER: out # The folder the action should deploy.
