--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-table": "^7.8.0",
     "shiki": "^0.11.1"
   },
   "devDependencies": {
